# PluginCreator

./: CMakeLists.txt  CaptFactory.cpp  CaptFactory.h  README.md  main.cpp  makefile
LibCapt/: CMakeLists.txt  ICapt.cpp  ICapt.h  ICaptFactory.h
PluginCaptSurvey/: CMakeLists.txt  PluginSurvey.cpp  PluginSurvey.h  PluginSurveyCreator.cpp
PluginGps/: CMakeLists.txt  Gps.cpp  Gps.h  PluginGpsCreator.cpp
PluginSystem/: CMakeLists.txt  PluginSystem.cpp  PluginSystem.h
